--- a/Elegoo.ini
+++ b/Elegoo.ini
@@ -21,7 +21,7 @@ technology = FFF
 family = ELEGOO
 bed_model = neptune_bed.stl
 bed_texture = 
-default_materials = Generic PLA @ELEGOO; Generic PETG @ELEGOO; Generic ABS @ELEGOO; Elegoo PLA @ELEGOO
+default_materials = Generic PLA @ELEGOO; Generic PETG @ELEGOO; Generic ABS @ELEGOO; Generic PLA @ELEGOO; Generic TPU @ELEGOO
 
 [printer_model:NEPTUNE3PLUS]
 name = Elegoo Neptune-3 Plus
@@ -30,7 +30,7 @@ technology = FFF
 family = ELEGOO
 bed_model = neptune_bed.stl
 bed_texture = 
-default_materials = Generic PLA @ELEGOO; Generic PETG @ELEGOO; Generic ABS @ELEGOO; Elegoo PLA @ELEGOO
+default_materials = Generic PLA @ELEGOO; Generic PETG @ELEGOO; Generic ABS @ELEGOO; Generic PLA @ELEGOO; Generic TPU @ELEGOO
 
 [printer_model:NEPTUNE3MAX]
 name = Elegoo Neptune 3 Max
@@ -39,7 +39,7 @@ technology = FFF
 family = ELEGOO
 bed_model = neptune_bed.stl
 bed_texture = 
-default_materials = Generic PLA @ELEGOO; Generic PETG @ELEGOO; Generic ABS @ELEGOO; Elegoo PLA @ELEGOO
+default_materials = Generic PLA @ELEGOO; Generic PETG @ELEGOO; Generic ABS @ELEGOO; Generic PLA @ELEGOO; Generic TPU @ELEGOO
 
 
 # All presets starting with asterisk, for example *common*, are intermediate and they will
@@ -702,8 +702,6 @@ compatible_printers_condition = printer_model=~/(NEPTUNE).*/ and nozzle_diameter
 # Pay particular attention to bridging, overhangs and retractions.
 # Also print the following bed adhesion test at 0.1 layer height as well:
 #   https://www.prusaprinters.org/prints/4634-bed-adhesion-warp-test
-# At least for PLA, please keep bed temp at 60, as many Elegoo printers do not have any ABL
-# So having some leeway to get good bed adhesion is not a luxury for many users
 
 [filament:*common*]
 cooling = 0
@@ -811,18 +809,28 @@ first_layer_bed_temperature = 90
 bed_temperature = 90
 filament_vendor = Generic
 
+[filament:Generic TPU @ELEGOO]
+inherits = *TPU*
+temperature = 240
+bed_temperature = 50
+first_layer_temperature = 250
+first_layer_bed_temperature = 60
+filament_cost = 28.99
+filament_density = 1.12
+filament_vendor = Generic
+
 
 
 # Common printer preset
 [printer:*common*]
 printer_technology = FFF
-before_layer_gcode = ;BEFORE_LAYER_CHANGE\nG92 E0\n;{layer_z}\n\n
+#before_layer_gcode = ;BEFORE_LAYER_CHANGE\nG92 E0\n;{layer_z}\n\n
 between_objects_gcode = 
 pause_print_gcode = 
 deretract_speed = 40
 extruder_colour = #FCE94F
 extruder_offset = 0x0
-gcode_flavor = marlin
+gcode_flavor = marlin2
 silent_mode = 0
 remaining_times = 0
 machine_max_acceleration_e = 5000
@@ -843,7 +851,7 @@ machine_max_jerk_z = 0.4
 machine_min_extruding_rate = 0
 machine_min_travel_rate = 0
 machine_limits_usage = emit_to_gcode
-layer_gcode = ;AFTER_LAYER_CHANGE\n;{layer_z}
+#layer_gcode = ;AFTER_LAYER_CHANGE\n;{layer_z}
 max_print_height = 250
 printer_notes = 
 printer_settings_id = 
@@ -858,9 +866,10 @@ retract_restart_extra = 0
 retract_restart_extra_toolchange = 0
 retract_speed = 60
 single_extruder_multi_material = 0
+thumbnails = 16x16,220x220
 toolchange_gcode = 
 use_firmware_retraction = 0
-use_relative_e_distances = 1
+use_relative_e_distances = 0
 use_volumetric_e = 0
 variable_layer_height = 1
 wipe = 1
