change retract settings

--- a/Elegoo.ini
+++ b/Elegoo.ini
@@ -881,10 +881,10 @@ end_gcode = {if max_layer_z < max_print_height}G1 Z{z_offset+min(max_layer_z+2, 
 
 [printer:*directdriveextruder*]
 retract_length = 0.8
-retract_speed = 30
-deretract_speed = 30
-retract_before_travel = 1
-retract_before_wipe = 0%
+#retract_speed = 60
+#deretract_speed = 40
+#retract_before_travel = 2
+#retract_before_wipe = 0%
 start_gcode = G90 ; use absolute coordinates\nM220 S100 ;Reset Feedrate\nM221 S100 ;Reset Flowrate\nM104 S{first_layer_temperature[0]-60} ; set temporary nozzle temp to prevent oozing during homing\nM190 S{first_layer_bed_temperature[0]} ; wait for bed temp to stabilize\nM109 S{first_layer_temperature[0]-60} ; set temporary nozzle temp to prevent oozing during homing\nG28 ;home\nM420 S1 ; load mesh\nG1 Z10 F240\nG1 X2 Y10 F3000\nM109 S{first_layer_temperature[0]} ; wait for nozzle temp to stabilize\nG92 E0 ;Reset Extruder\nG1 Z0.45 F300\nG1 X1.5 Y20 F5000.0 ;Move to start position\nG1 Y120.0 F600.0 E15 ;Draw the first line\nG1 X0.5 F1000.0 ;Move to side a little\nG1 Y20 F600 E30 ;Draw the second line\nG92 E0 ;Reset Extruder
 end_gcode = G91 ;Relative positionning\nG1 E-2 F2700 ;Retract a bit\nG1 E-8 X5 Y5 Z3 F3000 ;Retract\nG90 ;Absolute positionning\nG1 X0 Y{print_bed_max[1]*0.8} F{travel_speed*60} ;Present print\nM106 S0 ;Turn-off fan\nM104 S0 ;Turn-off hotend\nM140 S0 ;Turn-off bed\nM84 X Y E ;Disable all steppers but Z
 
