--- a/Elegoo.ini
+++ b/Elegoo.ini
@@ -97,7 +97,7 @@ post_process =
 print_settings_id = 
 raft_layers = 0
 resolution = 0
-seam_position = nearest
+seam_position = aligned
 single_extruder_multi_material_priming = 0
 skirts = 1
 skirt_distance = 3
