add linear advance filaments update max acceleration

--- a/Elegoo.ini
+++ b/Elegoo.ini
@@ -819,6 +819,34 @@ filament_cost = 28.99
 filament_density = 1.12
 filament_vendor = Generic
 
+[filament:Generic PLA-K0.1 @ELEGOO]
+inherits = *PLA*
+start_filament_gcode = "M900 K0.1; Filament gcode LA 1.5"
+end_filament_gcode = "M900 K0.0"
+filament_vendor = Generic
+
+
+[filament:Generic PETG-K0.11 @ELEGOO]
+inherits = *PET*
+start_filament_gcode = "M900 K0.11; Filament gcode LA 1.5"
+end_filament_gcode = "M900 K0.0"
+filament_vendor = Generic
+
+[filament:Generic ABS-K0.08 @ELEGOO]
+inherits = *ABS*
+start_filament_gcode = "M900 K0.08; Filament gcode LA 1.5"
+end_filament_gcode = "M900 K0.0"
+first_layer_bed_temperature = 90
+bed_temperature = 90
+filament_vendor = Generic
+
+[filament:Generic TPU-95A-K0.55 @ELEGOO]
+inherits = *TPU*
+start_filament_gcode = "M900 K0.55; Filament gcode LA 1.5"
+end_filament_gcode = "M900 K0.0"
+bed_temperature = 50
+filament_vendor = Generic
+
 
 
 # Common printer preset
@@ -834,15 +862,15 @@ gcode_flavor = marlin2
 silent_mode = 0
 remaining_times = 0
 machine_max_acceleration_e = 5000
-machine_max_acceleration_extruding = 500
+machine_max_acceleration_extruding = 1000
 machine_max_acceleration_retracting = 1000
-machine_max_acceleration_travel = 500
-machine_max_acceleration_x = 500
-machine_max_acceleration_y = 500
+machine_max_acceleration_travel = 1000
+machine_max_acceleration_x = 1000
+machine_max_acceleration_y = 1000
 machine_max_acceleration_z = 100
 machine_max_feedrate_e = 60
-machine_max_feedrate_x = 500
-machine_max_feedrate_y = 500
+machine_max_feedrate_x = 300
+machine_max_feedrate_y = 300
 machine_max_feedrate_z = 10
 machine_max_jerk_e = 5
 machine_max_jerk_x = 8
@@ -850,7 +878,7 @@ machine_max_jerk_y = 8
 machine_max_jerk_z = 0.4
 machine_min_extruding_rate = 0
 machine_min_travel_rate = 0
-machine_limits_usage = emit_to_gcode
+#machine_limits_usage = emit_to_gcode
 #layer_gcode = ;AFTER_LAYER_CHANGE\n;{layer_z}
 max_print_height = 250
 printer_notes = 
