--- a/Elegoo.ini
+++ b/Elegoo.ini
@@ -852,7 +852,7 @@ filament_vendor = Generic
 # Common printer preset
 [printer:*common*]
 printer_technology = FFF
-#before_layer_gcode = ;BEFORE_LAYER_CHANGE\nG92 E0\n;{layer_z}\n\n
+before_layer_gcode = ;BEFORE_LAYER_CHANGE\nG92 E0\n;{layer_z}\n\n
 between_objects_gcode = 
 pause_print_gcode = 
 deretract_speed = 40
@@ -878,8 +878,8 @@ machine_max_jerk_y = 8
 machine_max_jerk_z = 0.4
 machine_min_extruding_rate = 0
 machine_min_travel_rate = 0
-#machine_limits_usage = emit_to_gcode
-#layer_gcode = ;AFTER_LAYER_CHANGE\n;{layer_z}
+machine_limits_usage = emit_to_gcode
+layer_gcode = ;AFTER_LAYER_CHANGE\n;{layer_z}
 max_print_height = 250
 printer_notes = 
 printer_settings_id = 
@@ -897,7 +897,7 @@ single_extruder_multi_material = 0
 thumbnails = 16x16,220x220
 toolchange_gcode = 
 use_firmware_retraction = 0
-use_relative_e_distances = 0
+use_relative_e_distances = 1
 use_volumetric_e = 0
 variable_layer_height = 1
 wipe = 1
