--- a/Elegoo.ini
+++ b/Elegoo.ini
@@ -825,7 +825,6 @@ start_filament_gcode = "M900 K0.1; Filament gcode LA 1.5"
 end_filament_gcode = "M900 K0.0"
 filament_vendor = Generic
 
-
 [filament:Generic PETG-K0.11 @ELEGOO]
 inherits = *PET*
 start_filament_gcode = "M900 K0.11; Filament gcode LA 1.5"
@@ -883,7 +882,7 @@ layer_gcode = ;AFTER_LAYER_CHANGE\n;{layer_z}
 max_print_height = 250
 printer_notes = 
 printer_settings_id = 
-retract_before_travel = 2
+retract_before_travel = 1.5
 retract_before_wipe = 70%
 retract_layer_change = 1
 retract_length_toolchange = 1
@@ -916,6 +915,9 @@ retract_length = 0.8
 start_gcode = G90 ; use absolute coordinates\nM220 S100 ;Reset Feedrate\nM221 S100 ;Reset Flowrate\nM104 S{first_layer_temperature[0]-60} ; set temporary nozzle temp to prevent oozing during homing\nM190 S{first_layer_bed_temperature[0]} ; wait for bed temp to stabilize\nM109 S{first_layer_temperature[0]-60} ; set temporary nozzle temp to prevent oozing during homing\nG28 ;home\nM420 S1 ; load mesh\nG1 Z10 F240\nG1 X2 Y10 F3000\nM109 S{first_layer_temperature[0]} ; wait for nozzle temp to stabilize\nG92 E0 ;Reset Extruder\nG1 Z0.45 F300\nG1 X1.5 Y20 F5000.0 ;Move to start position\nG1 Y120.0 F600.0 E15 ;Draw the first line\nG1 X0.5 F1000.0 ;Move to side a little\nG1 Y20 F600 E30 ;Draw the second line\nG92 E0 ;Reset Extruder
 end_gcode = G91 ;Relative positionning\nG1 E-2 F2700 ;Retract a bit\nG1 E-8 X5 Y5 Z3 F3000 ;Retract\nG90 ;Absolute positionning\nG1 X0 Y{print_bed_max[1]*0.8} F{travel_speed*60} ;Present print\nM106 S0 ;Turn-off fan\nM104 S0 ;Turn-off hotend\nM140 S0 ;Turn-off bed\nM84 X Y E ;Disable all steppers but Z
 
+[printer:*zhop*]
+retract_lift = 0.25
+retract_length = 3.2
 
 
 [printer:*0.3nozzle*]
@@ -970,6 +972,9 @@ inherits = *NEPTUNE3PRO*; *0.5nozzle*
 
 [printer:Elegoo Neptune-3 Pro (0.6 mm nozzle)]
 inherits = *NEPTUNE3PRO*; *0.6nozzle*
+
+[printer:Elegoo Neptune-3 Pro (0.4 mm nozzle & z-hop)]
+inherits = *NEPTUNE3PRO*; *0.4nozzle*; *zhop*
 
 
 
