--- a/Elegoo.ini
+++ b/Elegoo.ini
@@ -47,7 +47,7 @@ default_materials = Generic PLA @ELEGOO; Generic PETG @ELEGOO; Generic ABS @ELEG
 
 # Common print preset
 [print:*common*]
-avoid_crossing_perimeters = 1
+avoid_crossing_perimeters = 0
 bridge_acceleration = 250
 bridge_angle = 0
 bridge_flow_ratio = 0.95
@@ -854,7 +854,7 @@ printer_technology = FFF
 before_layer_gcode = ;BEFORE_LAYER_CHANGE\nG92 E0\n;{layer_z}\n\n
 between_objects_gcode = 
 pause_print_gcode = 
-deretract_speed = 40
+deretract_speed = 25
 extruder_colour = #FCE94F
 extruder_offset = 0x0
 gcode_flavor = marlin2
@@ -882,16 +882,16 @@ layer_gcode = ;AFTER_LAYER_CHANGE\n;{layer_z}
 max_print_height = 250
 printer_notes = 
 printer_settings_id = 
-retract_before_travel = 0.8
-retract_before_wipe = 70%
+retract_before_travel = 1
+retract_before_wipe = 0%
 retract_layer_change = 1
 retract_length_toolchange = 1
-retract_lift = 0
+retract_lift = 0.15
 retract_lift_above = 0
 retract_lift_below = 0
 retract_restart_extra = 0
 retract_restart_extra_toolchange = 0
-retract_speed = 60
+retract_speed = 50
 single_extruder_multi_material = 0
 thumbnails = 16x16,220x220
 toolchange_gcode = 
@@ -903,21 +903,13 @@ wipe = 1
 z_offset = 0
 printer_model = 
 default_filament_profile = "Generic PLA @ELEGOO"
-start_gcode = G90 ; use absolute coordinates\nM83 ; extruder relative mode\nM104 S150 ; set temporary nozzle temp to prevent oozing during homing\nM140 S{first_layer_bed_temperature[0]} ; set final bed temp\nG4 S30 ; allow partial nozzle warmup\nG28 ; home all axis\nG1 Z50 F240\nG1 X2.0 Y10 F3000\nM104 S{first_layer_temperature[0]} ; set final nozzle temp\nM190 S{first_layer_bed_temperature[0]} ; wait for bed temp to stabilize\nM109 S{first_layer_temperature[0]} ; wait for nozzle temp to stabilize\nG1 Z0.28 F240\nG92 E0\nG1 X2.0 Y140 E10 F1500 ; prime the nozzle\nG1 X2.3 Y140 F5000\nG92 E0\nG1 X2.3 Y10 E10 F1200 ; prime the nozzle\nG92 E0
-end_gcode = {if max_layer_z < max_print_height}G1 Z{z_offset+min(max_layer_z+2, max_print_height)} F600 ; Move print head up{endif}\nG1 X5 Y{print_bed_max[1]*0.85} F{travel_speed*60} ; present print\n{if max_layer_z < max_print_height-10}G1 Z{z_offset+min(max_layer_z+70, max_print_height-10)} F600 ; Move print head further up{endif}\n{if max_layer_z < max_print_height*0.6}G1 Z{max_print_height*0.6} F600 ; Move print head further up{endif}\nM140 S0 ; turn off heatbed\nM104 S0 ; turn off temperature\nM107 ; turn off fan\nM84 X Y E ; disable motors
+start_gcode =
+end_gcode =
 
 [printer:*directdriveextruder*]
-retract_length = 2.5
-#retract_speed = 60
-#deretract_speed = 40
-#retract_before_travel = 2
-#retract_before_wipe = 0%
+retract_length = 0.4
 start_gcode = G90 ; use absolute coordinates\nM220 S100 ;Reset Feedrate\nM221 S100 ;Reset Flowrate\nM104 S{first_layer_temperature[0]-60} ; set temporary nozzle temp to prevent oozing during homing\nM190 S{first_layer_bed_temperature[0]} ; wait for bed temp to stabilize\nM109 S{first_layer_temperature[0]-60} ; set temporary nozzle temp to prevent oozing during homing\nG28 ;home\nM420 S1 ; load mesh\nG1 Z10 F240\nG1 X2 Y10 F3000\nM109 S{first_layer_temperature[0]} ; wait for nozzle temp to stabilize\nG92 E0 ;Reset Extruder\nG1 Z0.45 F300\nG1 X1.5 Y20 F5000.0 ;Move to start position\nG1 Y120.0 F600.0 E15 ;Draw the first line\nG1 X0.5 F1000.0 ;Move to side a little\nG1 Y20 F600 E30 ;Draw the second line\nG92 E0 ;Reset Extruder
 end_gcode = G91 ;Relative positionning\nG1 E-2 F2700 ;Retract a bit\nG1 E-8 X5 Y5 Z3 F3000 ;Retract\nG90 ;Absolute positionning\nG1 X0 Y{print_bed_max[1]*0.8} F{travel_speed*60} ;Present print\nM106 S0 ;Turn-off fan\nM104 S0 ;Turn-off hotend\nM140 S0 ;Turn-off bed\nM84 X Y E ;Disable all steppers but Z
-
-[printer:*zhop*]
-retract_lift = 0.25
-retract_length = 3.2
 
 
 [printer:*0.3nozzle*]
@@ -960,6 +952,7 @@ bed_shape = 0x0,235x0,235x235,0x235
 max_print_height = 280
 printer_model = NEPTUNE3PRO
 printer_notes = Do not remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_ELEGOO\nPRINTER_MODEL_NEPTUNE3PRO\nPRINTER_HAS_ULTRADETAIL
+retract_lift_below = 279
 
 [printer:Elegoo Neptune-3 Pro (0.3 mm nozzle)]
 inherits = *NEPTUNE3PRO*; *0.3nozzle*
@@ -973,9 +966,6 @@ inherits = *NEPTUNE3PRO*; *0.5nozzle*
 [printer:Elegoo Neptune-3 Pro (0.6 mm nozzle)]
 inherits = *NEPTUNE3PRO*; *0.6nozzle*
 
-[printer:Elegoo Neptune-3 Pro (0.4 mm nozzle & z-hop)]
-inherits = *NEPTUNE3PRO*; *0.4nozzle*; *zhop*
-
 
 
 [printer:*NEPTUNE3PLUS*]
@@ -984,6 +974,7 @@ bed_shape = 0x0,330x0,330x330,0x330
 max_print_height = 410
 printer_model = NEPTUNE3PLUS
 printer_notes = Do not remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_ELEGOO\nPRINTER_MODEL_NEPTUNE3PLUS\nPRINTER_HAS_ULTRADETAIL
+retract_lift_below = 409
 
 [printer:Elegoo Neptune-3 Plus (0.3 mm nozzle)]
 inherits = *NEPTUNE3PLUS*; *0.3nozzle*
@@ -1005,6 +996,7 @@ bed_shape = 0x0,426x0,426x426,0x426
 max_print_height = 510
 printer_model = NEPTUNE3MAX
 printer_notes = Do not remove the following keywords! These keywords are used in the "compatible printer" condition of the print and filament profiles to link the particular print and filament profiles to this printer profile.\nPRINTER_VENDOR_ELEGOO\nPRINTER_MODEL_NEPTUNE3MAX\nPRINTER_HAS_ULTRADETAIL
+retract_lift_below = 509
 
 [printer:Elegoo Neptune-3 Max (0.3 mm nozzle)]
 inherits = *NEPTUNE3MAX*; *0.3nozzle*
