add hatchbox petg filament settings

--- a/Elegoo.ini
+++ b/Elegoo.ini
@@ -846,6 +846,13 @@ end_filament_gcode = "M900 K0.0"
 bed_temperature = 50
 filament_vendor = Generic
 
+[filament:Hatchbox PETG]
+inherits = *PET*
+extrusion_multiplier = 0.87
+temperature = 230
+first_layer_temperature = 230
+filament_vendor = Hatchbox
+
 
 
 # Common printer preset
@@ -854,7 +861,7 @@ printer_technology = FFF
 before_layer_gcode = ;BEFORE_LAYER_CHANGE\nG92 E0\n;{layer_z}\n\n
 between_objects_gcode = 
 pause_print_gcode = 
-deretract_speed = 25
+deretract_speed = 0
 extruder_colour = #FCE94F
 extruder_offset = 0x0
 gcode_flavor = marlin2
@@ -891,7 +898,7 @@ retract_lift_above = 0
 retract_lift_below = 0
 retract_restart_extra = 0
 retract_restart_extra_toolchange = 0
-retract_speed = 50
+retract_speed = 35
 single_extruder_multi_material = 0
 thumbnails = 16x16,220x220
 toolchange_gcode = 
@@ -907,7 +914,7 @@ start_gcode =
 end_gcode =
 
 [printer:*directdriveextruder*]
-retract_length = 0.4
+retract_length = 0.8
 start_gcode = G90 ; use absolute coordinates\nM220 S100 ;Reset Feedrate\nM221 S100 ;Reset Flowrate\nM104 S{first_layer_temperature[0]-60} ; set temporary nozzle temp to prevent oozing during homing\nM190 S{first_layer_bed_temperature[0]} ; wait for bed temp to stabilize\nM109 S{first_layer_temperature[0]-60} ; set temporary nozzle temp to prevent oozing during homing\nG28 ;home\nM420 S1 ; load mesh\nG1 Z10 F240\nG1 X2 Y10 F3000\nM109 S{first_layer_temperature[0]} ; wait for nozzle temp to stabilize\nG92 E0 ;Reset Extruder\nG1 Z0.45 F300\nG1 X1.5 Y20 F5000.0 ;Move to start position\nG1 Y120.0 F600.0 E15 ;Draw the first line\nG1 X0.5 F1000.0 ;Move to side a little\nG1 Y20 F600 E30 ;Draw the second line\nG92 E0 ;Reset Extruder
 end_gcode = G91 ;Relative positionning\nG1 E-2 F2700 ;Retract a bit\nG1 E-8 X5 Y5 Z3 F3000 ;Retract\nG90 ;Absolute positionning\nG1 X0 Y{print_bed_max[1]*0.8} F{travel_speed*60} ;Present print\nM106 S0 ;Turn-off fan\nM104 S0 ;Turn-off hotend\nM140 S0 ;Turn-off bed\nM84 X Y E ;Disable all steppers but Z
 
